# Minebrew

./: .gitignore  Cargo.toml  README.md  azure-pipelines.yml  dev_notes.txt  minebrew.json
minebrew-bin/: Cargo.toml
minebrew-bin/src/: main.rs
minebrew-cfg/: Cargo.toml
minebrew-cfg/src/: args.rs  args2.rs  config.rs  config_file.rs  lib.rs
minebrew-db/: Cargo.toml
minebrew-db/src/: lib.rs
minebrew-lib/: Cargo.toml
minebrew-lib/src/: common.rs  lib.rs  minebrew.rs  project.rs  search.rs  shared.rs  version.rs
minebrew-lib/src/modrinth/: example_json  minebrew.rs  mod.rs  modrinth.rs  project.rs  search.rs  shared.rs  version.rs
minebrew-lib/src/modrinth_api/: mod.rs  modrinth.rs  traits.rs
res/: search.json
src/lib/: lib.rs  project.rs  search.rs  shared.rs  traits.rs
src/lib/modrinth/: mod.rs  search.rs
