[package]
name = "minebrew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mbrew_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "mbrew"
path = "src/bin/bin.rs"

[dependencies]
reqwest = { version = "0.11.10", features = ["json", "blocking", "stream"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
indicatif = "0.16.2"
gumdrop = "0.8.1"
