[package]
name = "minebrew-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mbrew"
path = "src/main.rs"

[dependencies]
minebrew-lib = { path = "../minebrew-lib"}
minebrew-cfg = { path = "../minebrew-cfg"}
minebrew-db = { path = "../minebrew-db"}
tokio = { version = "1.19.2", features = ["full"] }
futures = "0.3.21"
anyhow = "1.0.58"
