[package]
name = "minebrew-cfg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# clap = { version = "3.2.6", features = ["derive"] }
# clap = "3.2.6"
argh = "0.1.8"
serde = { version = "1.0",  features = ["derive"] }
toml = "0.5.9"
dirs = "4.0.0"
