[package] 
name = "minebrew-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minebrew-lib = { path = "../minebrew-lib"}
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
