[package]
name = "minebrew-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
reqwest = { version = "0.11.10", default-features = false, features = ["json", "stream", "default-tls"] }
tokio =   { version = "1.19.2", features = ["full"] }
futures = "0.3.21"
anyhow = "1.0.58"

[dev-dependencies]
httpmock = "0.6.6"
